# ML-game-based-learning

./: .gitignore  .vercelignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_LOCAL.md  check_status.sh  setup_database.py  setup_database_with_auth.py  setup_db_simple.py  start_local.sh  vercel.json
backend/: .env  .env.example  alembic.ini  pyproject.toml  requirements.txt  seed_data.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  auth.py  jobs.py  lessons.py  module0.py  progress.py  submissions.py
backend/app/core/: auth.py  config.py  deps.py  security.py
backend/app/models/: __init__.py  analytics.py  job.py  lesson.py  progress.py  submission.py  user.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  job.py  lesson.py  progress.py  submission.py  user.py
backend/tests/: test_jobs.py  test_main.py  test_progress.py  test_submissions.py
content/module0/: README.md  challenge1-journey-between-towns.py  challenge10-portals-planes.py  challenge2-vector-duel.py  challenge3-magic-bridge.py  challenge4-roads-waypoints.py  challenge5-valley-curves.py  challenge6-duel-lines.py  challenge7-tower-watch.py  challenge8-triangle-forge.py  challenge9-circle-rune.py  content-index.md
content/module1/: README.md  lesson1-vectors.py  lesson2-matrices.py  lesson3-eigenvalues.py  lesson4-probability.py  lesson5-bayes-theorem.py  (+4 more)
docs/: README.md  authoring-guide.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vercel.json
infra/: docker-compose.yml  init.sql
runner/: Dockerfile  requirements.txt  runner.py
(+40 files in other folders)
